# max_coverage

./: CMakeLists.txt  README.md  boundaries.txt  compile.sh  exp.sh  generate_boundaries.py  maxcover.cpp  one.sh  post_process.sh  result.txt  stopsignal.c  stopsignal.h  test.sh  test.txt  utils.h
test/: 01.txt
